@@ -271,16 +271,16 @@ static const cmdline_option_t cmdline_options[] = {
       "SaveResourcesOnExit", (resource_value_t)0,
       0, IDS_NO_SAVE_SETTINGS_ON_EXIT },
     { "-confirmexit", SET_RESOURCE, 0, NULL, NULL,
-      "ConfirmOnExit", (resource_value_t)0,
+      "ConfirmOnExit", (resource_value_t)1,
       0, IDS_CONFIRM_QUIT_VICE },
     { "+confirmexit", SET_RESOURCE, 0, NULL, NULL,
-      "ConfirmOnExit", (resource_value_t)1,
+      "ConfirmOnExit", (resource_value_t)0,
       0, IDS_NO_CONFIRM_QUIT_VICE },
     { "-singlecpu", SET_RESOURCE, 0, NULL, NULL,
-      "SingleCPU", (resource_value_t)0,
+      "SingleCPU", (resource_value_t)1,
       0, IDS_USE_ALL_CPU_SMP },
     { "+singlecpu", SET_RESOURCE, 0, NULL, NULL,
-      "SingleCPU", (resource_value_t)1,
+      "SingleCPU", (resource_value_t)0,
       0, IDS_USE_FIRST_CPU_SMP },
     { NULL }
 };
